# aigov-scan

./: .gitignore  README.md  pyproject.toml
.github/workflows/: aigov.yml
aigov_scan/: cli.py
aigov_scan/detectors/: license.py  license_db.py  pii.py  source.py
aigov_scan/fingerprint/: manifest.py
aigov_scan/ingest/: local_fs.py
aigov_scan/output/: _hashing.py  datacard.py  evidence.py  findings.py  sarif.py
aigov_scan/policy/: dsl.py  engine.py
aigov_scan/utils/: text.py
examples/demo_dataset/: LICENSE
policies/: default.yaml
